tests/expectations/compiler/function/shadow_parameter_fail.out
Error [EAST0372009]: variable `hi` shadowed by
    --> compiler-test:4:13
     |
   4 |         let hi = 2u8;
     |             ^^
